# swift-mock-gen

./: .gitignore  BUILD.bazel  Package.swift  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-swift-mock-gen  bazel-testlogs  ci.yaml  deps.bzl  generate_swift_mock.bzl
.github/workflows/: ci.yaml  deploy.yaml  push.yaml
ExampleIntegration/: .gitignore  BUILD.bazel  Package.swift  README.md  WORKSPACE.bazel
ExampleIntegration/CommonFeature/: BUILD.bazel
ExampleIntegration/CommonFeature/Sources/: Common.swift
ExampleIntegration/FeatureAlpha/: BUILD.bazel
ExampleIntegration/FeatureAlpha/Sources/: OtherImpl.swift
ExampleIntegration/FeatureAlpha/Tests/: OtherImplTests.swift
ExampleIntegration/FeatureBeta/: BUILD.bazel
ExampleIntegration/FeatureBeta/ExampleImpl/: ExampleImpl.swift
ExampleIntegration/FeatureBeta/ExampleImplTests/: ExampleImplTests.swift
ExampleIntegration/FeatureBeta/Sources/: Example.swift  ParentProtocol.swift
ExampleIntegration/Sources/Example/: Example.swift
ExampleIntegration/Sources/ExampleImpl/: ExampleImpl.swift
ExampleIntegration/Sources/ExampleIntegration/: ExampleIntegration.swift
ExampleIntegration/Tests/ExampleImplTests/: ExampleImplTests.swift
ExampleIntegration/Tests/ExampleIntegrationTests/: ExampleIntegrationTests.swift
ExampleTests/: ExampleMockImpl.swift  ExampleNoDepMockImpl.swift  ExampleProtocol.swift  ExampleTests.swift
Scripts/: gen_mock_under_dir.py
Sources/CLIUtils/: ProtocolDeclSyntax+Utils.swift  ProtocolDepResolver.swift  SourceFileContentIterator.swift
Sources/CodeGenerationFactories/Sources/: FunctionClassMemberImplFactory.swift  FunctionExpectImplFactory.swift  FunctionMockImplFactory.swift  FunctionStubImplFactory.swift  Helpers.swift  MockClassFactory.swift  SourceFactory.swift  VariableImplFactory.swift
Sources/CodeGenerationFactories/Sources/Function/: FunctionClassMemberImplFactory.swift  FunctionExpectImplFactory.swift  FunctionMockImplFactory.swift  FunctionStubImplFactory.swift  FunctionVerifyImplFactory.swift
Sources/CodeGenerationFactories/Sources/NoDep/: FuncNameDescriptor.swift  FunctionHandlerNoDepImplFactory.swift  FunctionMockNoDepImplFactory.swift  GenericParamsDeclsFactory.swift  NoDepMockClassFactory.swift  NoDepSourceFactory.swift
Sources/CodeGenerationFactories/Sources/Shared/: FuncNameDeduper.swift  FunctionInvocationImplFactory.swift
Sources/MockSupport/: Expectation.swift  Matching.swift
Sources/MockTestSupport/: Expectation.swift  Matching.swift
Sources/SwiftMockGen/: GenerateMock.swift
Sources/SwiftMockGenMacro/: Plugin.swift  ProtocolExtractor.swift  SwiftMockGenMacro.swift
Sources/swift-mock-gen/: BasicFormat.swift  MockGenCommand.swift  ParseCommand.swift  SourceFileContentIterator.swift  StdinIterator.swift  SwiftMockGen.swift
Sources/swift-mock-gen/Commands/: GenerateMock.swift  GenerateNoDepMock.swift  PerformanceTest.swift  Reduce.swift
Tests/CLIUtilsTests/: ProtocolDepResolverTests.swift
Tests/CodeGenerationFactoriesTests/: FunctionClassMemberImplFactoryTests.swift  FunctionExpectImplFactoryTests.swift  FunctionMockImplFactoryTests.swift  FunctionStubImplFactoryTests.swift  FunctionVerifyImplFactoryTests.swift  MockClassFactoryTests.swift  TestCases.swift  VariableImplFactoryTests.swift
Tests/CodeGenerationFactoriesTests/NoDep/: FuncNameDeduperTests.swift  FunctionHandlerNoDepImplFactoryTests.swift  FunctionInvocationImplFactoryTests.swift  FunctionMockNoDepImplFactoryTests.swift  NoDepMockClassFactoryTests.swift  NoDepSourceFactoryTests.swift
Tests/SwiftMockGenMacroTests/: SwiftMockGenMacroTests.swift
snapci/: cool.sh  deploy.sh  publish_binaries.sh  utils.sh
