load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_binary", "swift_compiler_plugin", "swift_test")

swift_library(
    name = "CodeGenerationFactories",
    srcs = glob(["Sources/CodeGenerationFactories/**/*.swift"]),
    deps = [
        "@swift_syntax//:SwiftOperators",
        "@swift_syntax//:SwiftSyntax",
        "@swift_syntax//:SwiftSyntaxBuilder",
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "CLIUtils",
    srcs = glob(["Sources/CLIUtils/**/*.swift"]),
    deps = [
        "@swift_syntax//:SwiftParser",
        "@swift_syntax//:SwiftSyntax",
        "@swift_syntax//:SwiftSyntaxBuilder",
    ],
    visibility = ["//visibility:public"],
)

swift_binary(
    name = "swift-mock-gen",
    srcs = glob(["Sources/swift-mock-gen/**/*.swift"]),
    deps = [
        ":CLIUtils",
        ":CodeGenerationFactories",
        "@swift_syntax//:SwiftDiagnostics",
        "@swift_syntax//:SwiftOperators",
        "@swift_syntax//:SwiftParser",
        "@swift_syntax//:SwiftParserDiagnostics",
        "@swift_syntax//:SwiftSyntax",
        "@swift_argument_parser//:ArgumentParser",
    ],
    visibility = ["//visibility:public"],
)

swift_compiler_plugin(
    name = "SwiftMockGenMacro",
    srcs = glob(["Sources/SwiftMockGenMacro/**/*.swift"]),
    deps = [
        ":CodeGenerationFactories",
        "@swift_syntax//:SwiftSyntax",
        "@swift_syntax//:SwiftCompilerPlugin",
        "@swift_syntax//:SwiftSyntaxMacros",
    ]
)

swift_test(
    name = "SwiftMockGenMacroTests",
    srcs = glob(["Tests/SwiftMockGenMacroTests/**/*.swift"]),
    deps = [
        ":SwiftMockGenMacro",
        "@swift_syntax//:SwiftSyntaxMacrosTestSupport",
    ]
)

swift_library(
    name = "SwiftMockGen",
    srcs = glob(["Sources/SwiftMockGen/**/*.swift"]),
    plugins = [":SwiftMockGenMacro"],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "CodeGenTesting",
    srcs = glob(["Sources/CodeGenTesting/**/*.swift"]),
    testonly = True,
    deps = [
        "@swift_syntax//:SwiftSyntax",
        "@swift_syntax//:SwiftSyntaxMacrosTestSupport",
    ],
    visibility = ["//visibility:public"],
)

swift_test(
    name = "CodeGenerationFactoriesTests",
    srcs = glob(["Tests/CodeGenerationFactoriesTests/**/*.swift"]),
    deps = [
        ":CodeGenerationFactories",
        ":CodeGenTesting",
        "@swift_syntax//:SwiftSyntax",
        "@swift_syntax//:SwiftSyntaxBuilder",
    ],
)

swift_test(
    name = "CLIUtilsTests",
    srcs = glob(["Tests/CLIUtilsTests/**/*.swift"]),
    deps = [
        ":CLIUtils",
        "@swift_syntax//:SwiftParser",
        "@swift_syntax//:SwiftSyntax",
    ],
)
