load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")
load("@swift_mock_gen//:generate_swift_mock.bzl", "generate_swift_mock_module")

swift_library(
    name = "Example",
    srcs = glob(["Sources/Example/**/*.swift"]),
    deps = [
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "ExampleImpl",
    srcs = glob(["Sources/ExampleImpl/**/*.swift"]),
    deps = [
        ":Example",
    ],
    visibility = ["//visibility:public"],
)

generate_swift_mock_module(
    name = "generate_swift_mock_module",
    srcs = glob(["Sources/Example/**/*.swift"]),
    api_module = ":Example",
    exclude_protocols = [],
)

swift_test(
    name = "ExampleImplTests",
    srcs = glob(["Tests/ExampleImplTests/**/*.swift"]),
    deps = [
        ":Example",
        ":ExampleImpl",
        ":ExampleMock", # a ${Target}Mock library will be synthesized consisting of mocks of all the protocols in the api_module library.
    ],
)
